@@ -1,3 +1,12 @@
+2020-06-22  Jacob Bachmeyer  <jcb62281+dev@gmail.com>
+
+	* lib/target.exp (default_target_compile): Actually use internal
+	option for separate linker provided for Go language support.  This
+	seems to have been accidentally omitted from Tom Tromey's patches.
+	(default_target_compile): Ensure that "--emit obj" is spaced from
+	previous item when used to compile Rust.  Use "--emit asm" instead
+	of "-S" when generating assembly from Rust sources.
+
 2020-06-20  Jacob Bachmeyer  <jcb62281+dev@gmail.com>
 
 	* doc/dejagnu.texi (Libgloss): Update menu.
